--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,506 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Partitioning and Law of Total Probability - Lab\n", "\n", "## Introduction \n", "In this lab, you'll practice your knowledge of the law of total probability. In probability theory, the law (or formula) of total probability is a fundamental rule relating **marginal probabilities** to **conditional probabilities**.\n", "\n", "## Objectives\n", "\n", "You will be able to:\n", "\n", "* Differentiate between independent and dependent events\n", "* Perform partitioning based on known and unknown probabilities to solve a problem"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 1\n", "Imagine you have two hats: one has 4 red balls and 6 green balls, the other has 6 red and 4 green. We toss a fair coin, if heads, you will pick a random ball from the first hat, if tails you will pick one from the second hat. \n", "\n", "What is the probability of getting a red ball?"]}, {"cell_type": "code", "execution_count": 5, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 2\n", "In games where at least one goal is made, a soccer team wins 60% of its games when it scores the first goal, and 10% of its games when the opposing team \n", "scores first. \n", "\n", "If the team scores the first goal about 30% of the time, what fraction of the games does it win?"]}, {"cell_type": "code", "execution_count": 7, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 3"]}, {"cell_type": "markdown", "metadata": {}, "source": ["In Europe, except for regular gas, cars often run on diesel as well. At a gas station in Paris; \n", "\n", "\n", "* 40% of the customers fill up with diesel (event G1) \n", "* 35% with gas \"Super 95\" (event G2)\n", "* 25% with gas \"Super 98\" (event G3). \n", "\n", "\n", "* 30% of the customers who buy diesel fill their tank completely (event F). \n", "* For \"Super 95\" and \"Super 98\", these numbers are  60% and 50%, respectively.\n", "\n", "\n", "- Compute the probability that the next customer completely fills their tank and buys Super 95. \n", "- Compute the probability that the next customer completely fills their tank\n", "- Given that the next customer fills their tank completely, compute the probability that they bought diesel. \n", "\n", "Hint: Consult the theorems for conditional probability, check for dependence or independence of events"]}, {"cell_type": "code", "execution_count": 9, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 4"]}, {"cell_type": "markdown", "metadata": {}, "source": ["United Airlines operates flights from JFK to Amsterdam, to Brussels, and to Copenhagen. As you may know, flights are overbooked fairly often. Let's denote the probability of the flight to Amsterdam being overbooked equal to 40%, the probability of the flight to Brussels being overbooked equal to 25%, and the probability of the flight to Copenhagen being overbooked equal to 35%. You can assume that these events of overbooking are independent events."]}, {"cell_type": "markdown", "metadata": {}, "source": ["- Compute the probability that all the flights are overbooked.\n", "- Compute the probability of having at least one flight which is not overbooked.\n", "- Compute the probability that exactly one flight is overbooked."]}, {"cell_type": "code", "execution_count": 13, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 5\n", "You have three bags that each contain 100 marbles:\n", "\n", "- Bag 1 has 75 red and 25 blue marbles;\n", "- Bag 2 has 60 red and 40 blue marbles;\n", "- Bag 3 has 45 red and 55 blue marbles.\n", "\n", "You choose one of the bags at random and then pick a marble from the chosen bag, also at random. \n", "\n", "What is the probability that the chosen marble is red?\n"]}, {"cell_type": "code", "execution_count": 17, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary \n", "\n", "In this lab, you practiced conditional probability and its theorem with some simple problems. The key takeaway from this lab is to be able to identify random events as dependent or independent and calculating the probability of their occurrence using appropriate methods. Next, you'll take this knowledge a step further and run simulations with conditional and total probability. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Partitioning and Law of Total Probability - Lab\n",
+    "\n",
+    "## Introduction \n",
+    "In this lab, you'll practice your knowledge of the law of total probability. In probability theory, the law (or formula) of total probability is a fundamental rule relating **marginal probabilities** to **conditional probabilities**.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "\n",
+    "* Differentiate between independent and dependent events\n",
+    "* Perform partitioning based on known and unknown probabilities to solve a problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "Imagine you have two hats: one has 4 red balls and 6 green balls, the other has 6 red and 4 green. We toss a fair coin, if heads, you will pick a random ball from the first hat, if tails you will pick one from the second hat. \n",
+    "\n",
+    "What is the probability of getting a red ball?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hat 1\n",
+    "* 4 red balls\n",
+    "* 6 green balls\n",
+    "\n",
+    "hat 2\n",
+    "* 6 red balls\n",
+    "* 4 green balls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T14:36:42.152870Z",
+     "start_time": "2020-03-20T14:36:42.148851Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p_heads = 0.5\n",
+    "p_tails = 0.5\n",
+    "\n",
+    "p_red_1 = 4/10\n",
+    "\n",
+    "p_red_2 = 6/10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T14:48:38.723594Z",
+     "start_time": "2020-03-20T14:48:38.718005Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "p_red_given_heads = p_red_1\n",
+    "\n",
+    "p_red_given_tails = p_red_2\n",
+    "\n",
+    "p_red = (p_red_given_heads * p_heads) + (p_red_given_tails * p_tails)\n",
+    "\n",
+    "p_red"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "In games where at least one goal is made, a soccer team wins 60% of its games when it scores the first goal, and 10% of its games when the opposing team \n",
+    "scores first. \n",
+    "\n",
+    "If the team scores the first goal about 30% of the time, what fraction of the games does it win?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T14:55:39.037591Z",
+     "start_time": "2020-03-20T14:55:39.031565Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_w_win = 0.6\n",
+    "second_w_win = 0.1\n",
+    "first_goal = 0.3\n",
+    "\n",
+    "win = first_w_win * first_goal + second_w_win * (1 - first_goal)\n",
+    "\n",
+    "win\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Europe, except for regular gas, cars often run on diesel as well. At a gas station in Paris; \n",
+    "\n",
+    "\n",
+    "* 40% of the customers fill up with diesel (event G1) \n",
+    "* 35% with gas \"Super 95\" (event G2)\n",
+    "* 25% with gas \"Super 98\" (event G3). \n",
+    "\n",
+    "\n",
+    "* 30% of the customers who buy diesel fill their tank completely (event F). \n",
+    "* \"Super 95\" fill is 60%\n",
+    "* \"super 98\" fill is 50%\n",
+    "\n",
+    "\n",
+    "- Compute the probability that the next customer completely fills their tank and buys Super 95. \n",
+    "- Compute the probability that the next customer completely fills their tank\n",
+    "- Given that the next customer fills their tank completely, compute the probability that they bought diesel. \n",
+    "\n",
+    "Hint: Consult the theorems for conditional probability, check for dependence or independence of events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:02:25.627691Z",
+     "start_time": "2020-03-20T15:02:25.621454Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use_diesel = 0.4\n",
+    "use_95 = 0.35\n",
+    "use_98 = 0.25\n",
+    "\n",
+    "fill_given_diesel = 0.3\n",
+    "fill_given_95 = 0.6\n",
+    "fill_given_98 = 0.5\n",
+    "\n",
+    "# product rule\n",
+    "next_is_95_and_fills = use_95 * fill_given_95\n",
+    "next_is_95_and_fills"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:04:01.398948Z",
+     "start_time": "2020-03-20T15:04:01.393733Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45499999999999996"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# law of total prob\n",
+    "fills = fill_given_diesel*use_diesel + fill_given_95 * use_95 + fill_given_98 * use_98\n",
+    "fills"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:07:08.509787Z",
+     "start_time": "2020-03-20T15:07:08.504629Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26373626373626374"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# bayes theorum\n",
+    "bought_diesel_given_fills = (fill_given_diesel * use_diesel) / fills\n",
+    "bought_diesel_given_fills"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "United Airlines operates flights from JFK to Amsterdam, to Brussels, and to Copenhagen. As you may know, flights are overbooked fairly often. Let's denote\n",
+    "* the probability of the flight to Amsterdam being overbooked equal to 40%, \n",
+    "* the probability of the flight to Brussels being overbooked equal to 25%, \n",
+    "* and the probability of the flight to Copenhagen being overbooked equal to 35%. \n",
+    "\n",
+    "You can assume that these events of overbooking are independent events."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Compute the probability that all the flights are overbooked.\n",
+    "- Compute the probability of having at least one flight which is not overbooked.\n",
+    "- Compute the probability that exactly one flight is overbooked."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:15:08.381941Z",
+     "start_time": "2020-03-20T15:15:08.376236Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.034999999999999996"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# chain rule, since they are independent, just multiply them all together\n",
+    "\n",
+    "p_a = 0.4\n",
+    "p_b = 0.25\n",
+    "p_c = 0.35\n",
+    "\n",
+    "all_overbooked = p_a * p_b * p_c\n",
+    "all_overbooked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:23:05.001606Z",
+     "start_time": "2020-03-20T15:23:04.996690Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.965"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# opposite of all overbooked\n",
+    "at_least_one_not = 1 - all_overbooked\n",
+    "at_least_one_not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:41:32.335907Z",
+     "start_time": "2020-03-20T15:41:32.329010Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45000000000000007"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sum of p of one times oppostite of the others\n",
+    "# because the events are mutually exclusive / independent\n",
+    "p_a_only = p_a * (1-p_b) * (1-p_c)\n",
+    "p_b_only = p_b * (1-p_a) * (1-p_c)\n",
+    "p_c_only = p_c * (1-p_a) * (1-p_b)\n",
+    "\n",
+    "exactly_one = p_a_only + p_b_only + p_c_only\n",
+    "exactly_one"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5\n",
+    "You have three bags that each contain 100 marbles:\n",
+    "\n",
+    "- Bag 1 has 75 red and 25 blue marbles;\n",
+    "- Bag 2 has 60 red and 40 blue marbles;\n",
+    "- Bag 3 has 45 red and 55 blue marbles.\n",
+    "\n",
+    "You choose one of the bags at random and then pick a marble from the chosen bag, also at random. \n",
+    "\n",
+    "What is the probability that the chosen marble is red?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T15:47:47.288314Z",
+     "start_time": "2020-03-20T15:47:47.282199Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# law of total probability\n",
+    "red_1 = 0.75\n",
+    "red_2 = 0.6\n",
+    "red_3 = 0.45\n",
+    "pick_any = 1/3\n",
+    "\n",
+    "pick_red = red_1 * pick_any + red_2 * pick_any + red_3 * pick_any\n",
+    "pick_red"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary \n",
+    "\n",
+    "In this lab, you practiced conditional probability and its theorem with some simple problems. The key takeaway from this lab is to be able to identify random events as dependent or independent and calculating the probability of their occurrence using appropriate methods. Next, you'll take this knowledge a step further and run simulations with conditional and total probability. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "oldHeight": 448,
+   "position": {
+    "height": "40px",
+    "left": "808px",
+    "right": "20px",
+    "top": "120px",
+    "width": "277px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "varInspector_section_display": "none",
+   "window_display": true
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
